# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "exported_symbols.lds",
        "version_script.lds",
    ],
    visibility = ["//visibility:private"],
)

pybind_extension(
    name = "ecdh_psi_pybind",
    srcs = [
        "ecdh_psi_pybind.cc",
        "ecdh_psi_pybind.h",
    ],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-Wl,-exported_symbols_list,$(location //psi/python:exported_symbols.lds)",
        ],
        "//conditions:default": [
            "-Wl,--version-script,$(location //psi/python:version_script.lds)",
        ],
    }),
    deps = [
        ":exported_symbols.lds",
        ":version_script.lds",
        "@yacl//yacl/crypto/ecc",
        "@yacl//yacl/crypto/hash:hash_utils",
    ],
)

py_library(
    name = "ecdh_psi",
    srcs = [
        "ecdh_psi.py",
    ],
    data = [":ecdh_psi_pybind.so"],
    imports = ["."],  # see: https://stackoverflow.com/questions/62372725/bazel-test-importerror-relative-import
)

py_test(
    name = "ecdh_psi_test",
    srcs = [
        "ecdh_psi_test.py",
    ],
    imports = ["."],  # see: https://stackoverflow.com/questions/62372725/bazel-test-importerror-relative-import
    deps = [":ecdh_psi"],
)
