load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "ipa_config",
    srcs = ["ipa_config.cc"],
    hdrs = ["ipa_config.h"],
    deps = [
        "@yacl//yacl/crypto/ecc:ec_point",
        "@yacl//yacl/crypto/ecc:spi",
        "@yacl//yacl/crypto/hash:hash_interface",
        "@yacl//yacl/math/mpint:mpint",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/utils:scope_guard",
        "@yacl//yacl/crypto/hash:hash_utils",
    ],
    copts = [
        "-Wno-unused-parameter",
        "-Wno-sign-compare",
        "-Wno-missing-field-initializers",
        "-Wno-unused-variable",
    ],
)

yacl_cc_library(
    name = "inner_product_proof",
    srcs = ["inner_product_proof.cc"],
    hdrs = ["inner_product_proof.h"],
    deps = [
        ":ipa_config",
        "@yacl//yacl/crypto:openssl_wrappers",
        "@yacl//yacl/crypto/ecc:ec_point",
        "@yacl//yacl/crypto/ecc:spi",
        "@yacl//yacl/crypto/tools:ro",
        "@yacl//yacl/math/mpint:mpint",
        "@yacl//yacl/math/mpint:mp_int_enforce",
        "@yacl//yacl/base:byte_container_view",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/utils:scope_guard",
        "@yacl//yacl/crypto/rand:rand",
    ],
    copts = [
        "-Wno-unused-parameter",
        "-Wno-sign-compare",
        "-Wno-missing-field-initializers",
        "-Wno-unused-variable",
    ],
)

yacl_cc_test(
    name = "inner_product_proof_test",
    srcs = ["inner_product_proof_test.cc"],
    deps = [
        ":inner_product_proof",
        ":ipa_config",
        "@yacl//yacl/crypto:openssl_wrappers",
        "@yacl//yacl/crypto/ecc:ec_point",
        "@yacl//yacl/crypto/ecc:spi",
        "@yacl//yacl/crypto/tools:ro",
        "@yacl//yacl/math/mpint:mpint",
        "@yacl//yacl/math/mpint:mp_int_enforce",
        "@yacl//yacl/base:byte_container_view",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/utils:scope_guard",
        "@yacl//yacl/crypto/rand:rand",
    ],
    copts = [
        "-Wno-unused-parameter",
        "-Wno-sign-compare",
        "-Wno-missing-field-initializers",
        "-Wno-unused-variable",
    ],
)
