# Copyright 2022 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

# ====================
# High-level interface
# ====================

# In most of the cases, we recommend to use this target
yacl_cc_library(
    name = "aead",
    srcs = ["aead.cc"],
    hdrs = ["aead.h"],
    deps = [
        ":all_gcm",
        ":sm4_mte",
        "//yacl:secparam",
        "//yacl/base:int128",
        "//yacl/crypto:key_utils",
    ],
)

yacl_cc_test(
    name = "aead_test",
    srcs = ["aead_test.cc"],
    deps = [
        ":aead",
        "//yacl/crypto/rand",
    ],
)

# ========================
# Algorithm implementaions
# ========================

yacl_cc_library(
    name = "all_gcm",
    srcs = ["all_gcm.cc"],
    hdrs = ["all_gcm.h"],
    deps = [
        "//yacl:secparam",
        "//yacl/base:int128",
        "//yacl/crypto:key_utils",
    ],
)

yacl_cc_test(
    name = "all_gcm_test",
    srcs = ["all_gcm_test.cc"],
    deps = [
        ":all_gcm",
    ],
)

yacl_cc_library(
    name = "sm4_mte",
    srcs = ["sm4_mte.cc"],
    hdrs = ["sm4_mte.h"],
    deps = [
        "//yacl:secparam",
        "//yacl/crypto/block_cipher:symmetric_crypto",
        "//yacl/crypto/hash:ssl_hash",
        "//yacl/crypto/hmac:hmac_sm3",
    ],
)

yacl_cc_test(
    name = "sm4_mte_test",
    srcs = ["sm4_mte_test.cc"],
    deps = [
        ":sm4_mte",
    ],
)
